objects/Open_Lead_Notice__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Open Lead Notice</label>
    <fields>
        <fullName>Id1__c</fullName>
        <label>Id1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id2__c</fullName>
        <label>Id2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id3__c</fullName>
        <label>Id3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>